--- a/package.json
+++ b/package.json
@@ -61,10 +61,12 @@
 		"vitest-browser-svelte": "^0.1.0"
 	},
 	"dependencies": {
+		"@ai-sdk/openai": "^3.0.7",
 		"@aws-sdk/client-sqs": "^3.965.0",
 		"@prisma/adapter-pg": "^7.2.0",
 		"@prisma/client": "^7.2.0",
 		"@types/pg": "^8.16.0",
+		"ai": "^6.0.24",
 		"better-auth": "^1.4.10",
 		"katex": "^0.16.27",
 		"marked": "^17.0.1",
