add: pricing page

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"@storybook/addon-vitest": "^10.1.11",
 		"@storybook/sveltekit": "^10.1.11",
 		"@sveltejs/adapter-node": "^5.4.0",
-		"@sveltejs/kit": "^2.16.0",
+		"@sveltejs/kit": "^2.49.4",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
@@ -63,11 +63,13 @@
 	"dependencies": {
 		"@ai-sdk/openai": "^3.0.7",
 		"@aws-sdk/client-sqs": "^3.965.0",
+		"@polar-sh/better-auth": "^1.6.0",
+		"@polar-sh/sdk": "^0.42.1",
 		"@prisma/adapter-pg": "^7.2.0",
 		"@prisma/client": "^7.2.0",
 		"@types/pg": "^8.16.0",
 		"ai": "^6.0.24",
-		"better-auth": "^1.4.10",
+		"better-auth": "^1.4.3",
 		"jszip": "^3.10.1",
 		"katex": "^0.16.27",
 		"marked": "^17.0.1",
